--- a/microtubes.cabal
+++ b/microtubes.cabal
@@ -17,7 +17,7 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Control.Microtubes
-  -- other-modules:       
+  other-modules:       Control.Microtubes.Diagrams, Control.Microtubes.Runner, Control.Microtubes.Permutation, Control.Microtubes.Swarm, Control.Microtubes.Test
   other-extensions:    QuasiQuotes, DataKinds, TypeOperators, TypeFamilies, GADTs, TemplateHaskell, BangPatterns, KindSignatures, ExistentialQuantification, RankNTypes, FlexibleInstances, FlexibleContexts, ScopedTypeVariables
   build-depends:       base >=4.8 && <4.9, random >=1.1 && <1.2, split >=0.2 && <0.3, template-haskell >=2.10 && <2.11, ghc-prim >=0.4 && <0.5, stm >=2.4 && <2.5, QuickCheck >=2.8 && <2.9
   -- hs-source-dirs:      
